--- a/pyton.html
+++ b/pyton.html
@@ -26,7 +26,7 @@
             margin: 0px;
             padding: 0px;
             text-align: left;
-        }
+         }
         code{
         word-wrap:break-word;
         white-space: pre-wrap;
@@ -48,8 +48,32 @@
         <code>
         <span class="d"># Modo 1 - usando formatadores de caracteres (igual na linguagem C) para imprimir variável e texto</span>
         <span>print("Olá %s, bem vindo a disciplina de programação. Parabéns pelo seu primeiro hello world" % (nome))</span>
-        <span>ola porra</span>
+        <span>Olá João, bem vindo a disciplinade programação. Parabénspelo seu primeiro helloo world</span>
         </code>
+        <p>Por format()</p>
+        <code>
+            <span class="d"># Modo 2 - usando a função format() para imprimir variável e texto</span>
+            <span>print("Olá {}, bem vindo a disciplina de programação. Parabéns pelo seu primeiro hello world".format(nome))</span>
+        </code>
+        <p>Por strings</p>
+        <code>
+            <span class="d"># Modo 3 - usando strings formatadas</span>
+            <span>print(f"Olá {nome}, bem vindo a disciplina de programação. Parabéns pelo seu primeiro hello world")</span>
+        </code>
+        <p><strong>IMPORTANTE: Para fazermos comentário em Python, utilizamos a #</strong></p>
+        <h2>Operações matemática em Python</h2>
+        <p>Igualmente em matemática, possuimos os sinais matemáticos e as operações.</p>
+        <ul>
+            <li>x + y       =>Soma de x e y</li>
+                <li>x - y       =>Diferença de x e y</li>
+                <li>x * y       =>Produto de x e y</li>
+                <li>x / y       =>Quociente de x e y</li>
+                <li>x // y      =>Parte inteira do quociente de x e y</li>
+                <li>x % y       =>Resto de x / y</li>
+                <li>abs(x)      =>Valor absoluto de x</li>
+                <li>pow(x, y)   => x elevado a y</li>
+                <li>x ** y      => x elevado a y</li>
+        </ul>
 
     </main>   
 </body>
