--- a/pyton.html
+++ b/pyton.html
@@ -129,9 +129,9 @@
         <h1>ESTRUTURAS LÓGICAS EM PYTHON: AND, OR, NOT</h1>
         <p>Além dos operadores relacionais, podemos usar os operadores booleanos para construir estruturas de decisões mais complexas.</p>
         <ul>
-            <li>Operador booleano and: Esse operador faz a operação lógica E, ou seja, dada a expressão (a and b), o resultado será True, somente quando os dois argumentos forem verdadeiros.</li>
-            <li>Operador booleano or: Esse operador faz a operação lógica OU, ou seja, dada a expressão (a or b), o resultado será True, quando pelo menos um dos argumentos for verdadeiro.</li>
-            <li>Operador booleano not: Esse operador faz a operação lógica NOT, ou seja, dada a expressão (not a), ele irá inverter o valor do argumento. Portanto, se o argumento for verdadeiro, a operação o transformará em falso e vice-versa.</li>
+            <li>Operador booleano <strong>and</strong>: Esse operador faz a operação lógica E, ou seja, dada a expressão (a and b), o resultado será True, somente quando os dois argumentos forem verdadeiros.</li>
+            <li>Operador booleano <strong>or</strong>: Esse operador faz a operação lógica OU, ou seja, dada a expressão (a or b), o resultado será True, quando pelo menos um dos argumentos for verdadeiro.</li>
+            <li>Operador booleano <strong>not</strong>: Esse operador faz a operação lógica NOT, ou seja, dada a expressão (not a), ele irá inverter o valor do argumento. Portanto, se o argumento for verdadeiro, a operação o transformará em falso e vice-versa.</li>
         </ul>
         
     </main>   
