--- a/pyton.html
+++ b/pyton.html
@@ -133,6 +133,7 @@
             <li>Operador booleano <strong>or</strong>: Esse operador faz a operação lógica OU, ou seja, dada a expressão (a or b), o resultado será True, quando pelo menos um dos argumentos for verdadeiro.</li>
             <li>Operador booleano <strong>not</strong>: Esse operador faz a operação lógica NOT, ou seja, dada a expressão (not a), ele irá inverter o valor do argumento. Portanto, se o argumento for verdadeiro, a operação o transformará em falso e vice-versa.</li>
         </ul>
+        <p>Assim como as operações matemáticas possuem ordem de precedência, as operações booleanas também têm. Essa prioridade obedece à seguinte ordem: <strong>not</strong> primeiro, <strong>and</strong> em seguida e <strong>or</strong> por último </p>
         
     </main>   
 </body>
