--- a/pyton.html
+++ b/pyton.html
@@ -136,9 +136,13 @@
         <p>Assim como as operações matemáticas possuem ordem de precedência, as operações booleanas também têm. Essa prioridade obedece à seguinte ordem: <strong>not</strong> primeiro, <strong>and</strong> em seguida e <strong>or</strong> por último </p>
 
         <h1>ESTRUTURAS DE REPETIÇÃO EM PYTHON: WHILE E FOR</h1>
-         <p>A estrutura de repetição são dadas por while (enquanto) e por for(para). Eles tem como objetivo de repetir a execução do código. Assim, podemos programar para o programa fazer a pergunta X, dar-nos a resposta e, logo em seguida, fazer a pergunta X novamente, repetindo o processo.</p>
+         <p>A estrutura de repetição são dadas por while (enquanto) e por for(para). Eles tem como objetivo de repetir a execução do código. Assim, podemos programar para o programa fazer a pergunta X, dar-nos a resposta e, logo em seguida, fazer a pergunta X novamente, repetindo o processo. Ou seja, um loop</p>
          <p><strong>LEMBRE: todos os blocos de comandos em Python são controlados pela indentação.</strong></p>
-         <p>Usamos o comando "<strong>for</strong>" seguido da variável de controle "c", na sequência o comando "in" e, por fim, a sequência sobre a qual a estrutura deve iterar</p>
+         <p>O comando for em Python requer uma sequência para que ocorra a iteração. Assim, usamos o comando "<strong>for</strong>" seguido da variável, na sequência o comando "in" e, por fim, a sequência sobre a qual a estrutura deve iterar. Ou seja, sua sintaxe básica é: </p>
+         <code>
+            <span>for &ltnome variável&gt in &ltiterável &gt</span>
+         </code>
+         <strong>LEMBRE: Interável é o container de dados sobre o qual vamos iterar, podendo ser: uma lista,uma tupla, uma string, um dicionário, entre outros</strong>
          <code>
             <span>nome = "Guido"</span>
             <span>for c in nome:</span>
