--- a/pyton.html
+++ b/pyton.html
@@ -161,6 +161,23 @@
                 Posição = 3, valor = d
                 Posição = 4, valor = o</p>
          </code>
+         <p>Uma outra função importante seria a <strong>RANGE()</strong>. Basicamente ela irá dar uma sequência até o limite indicado dentro dos parenteses. Sua sintaxe é </p>
+         <code>
+            <span>for [nome variável] in range([litimite]):</span>
+            <span>for x in range(4) </span>
+              <span>print(x)</span>
+              <span>0</span>
+              <span>1</span>
+              <span>2</span>
+              <span>3</span>
+         </code>
+         <p>A função range() pode ser usada de três formas distintas:</p>
+
+            <ul>
+                <li>Método 1: passando um único argumento que representa a quantidade de vezes que o laço deve repetir;</li>
+                <li>Método 2: passando dois argumentos, um que representa o início das repetições e outro o limite superior (NÃO INCLUÍDO) do valor da variável de controle;</li>
+                <li>Método 3: Passando três argumentos, um que representa o início das repetições; outro, o limite superior (NÃO INCLUÍDO) do valor da variável de controle e um que representa o incremento.</li>
+            </ul>
     </main>   
 </body>
 </html>
