--- a/Python/pyton.html
+++ b/Python/pyton.html
@@ -204,7 +204,7 @@
                     <span>g</span>
                     <span>u</span>
             </code>
-            <p>Já <strong>Continue</strong> irá apenas pular todaos os padrões definidos, continuando a sequência. Seguindo o exemplo anterior; O código iria motrar todo "Linguam de programação" porém, iria pular todas as letras definidas ("a").</p>
+            <p>Já <strong>Continue</strong> irá pular todos os padrões definidos, continuando a sequência. Seguindo o exemplo anterior; O código iria motrar "Linguam de programação" porém, iria pular todas as letras definidas que foram definidas.</p>
             <code>
                 <span>disciplina = "Linguagem de programação"</span>
                 <span>for c in disciplina:</span>
